# ViennaPS

./: CMakeLists.txt
cmake/: generate_ptx.cmake
examples/: CMakeLists.txt
examples/DRAMWiggling/: DRAMWiggling.cpp  config.txt
examples/boschProcess/: CMakeLists.txt  boschProcessSimulate.cpp
examples/holeEtching/: holeEtching.cpp
examples/trenchDeposition/: trenchDeposition.cpp
gpu/benchmark/: CMakeLists.txt
gpu/examples/: CMakeLists.txt
include/viennaps/models/: psHBrO2Etching.hpp  psSF6O2Etching.hpp  psSingleParticleProcess.hpp
